Fix bitcask toList bug